--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "forkify",
   "version": "1.0.0",
+  "default": "index.html",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html"
+    "build": "parcel build index.html --dist-dir ./dist"
   },
   "author": "Kiet",
   "license": "ISC",
